--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,16 +6,16 @@
 	position: absolute;
  	width: 100%;
   height: 5rem;
-	z-index: 2; 
-	background: lightpink;
+	z-index: 2;  
 }
 
 .options-bar-background {
 	position: absolute;
   z-index: -2;
   height: 2.25rem;
-  width: 100%;
   top: 0;
+  width: 100%; 
+ /* min-width: 1165px;*/
 }
 
 /* =============================== Nav links ============================== */
@@ -36,7 +36,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-end;  
-	min-width: 29rem;
+	/*min-width: 380px;*/
 	padding-left: 6%;
 	padding-right: 3%;
 	height: 100%;
